k8s-ds-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend-deployment
  labels:
    app: demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-backend
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
      - name: demo-backend
        image: demo-backend
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
