k8s-ds-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend-deployment
  labels:
    app: demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
      - name: demo-frontend
        image: demo-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend-service
spec:
  selector:
    app: demo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


# curl -H "Host: demo.localdev.me" http://localhost:8080/
